--- a/roster.html
+++ b/roster.html
@@ -103,7 +103,6 @@
 <tr><td> GB</td><td>AJ Dillon              </td></tr>
 <tr><td>ATL</td><td>Tyler Allgeier         </td></tr>
 <tr><td>LAR</td><td>Kyren Williams         </td></tr>
-<tr><td>LAR</td><td>Darrell Henderson      </td></tr>
 <tr><td> NE</td><td>Ezekiel Elliott        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
@@ -116,6 +115,7 @@
 <tr><td>NYJ</td><td>Greg Zuerlein          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Blake Grupe            </td></tr>
+<tr><td>MIN</td><td>Jaren Hall             </td></tr>
 </table>
 </td>
 <td valign=top>
