--- a/week17.html
+++ b/week17.html
@@ -140,13 +140,13 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
 <tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Pacheco</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Edwards</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 <td></td><td></td>
