--- a/pickups.html
+++ b/pickups.html
@@ -118,8 +118,8 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Gerald Everett/TJ Hockenson</td>
+<td width=50>12/31</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
