--- a/roster.html
+++ b/roster.html
@@ -77,8 +77,8 @@
 <tr><td>TEN</td><td>DeAndre Hopkins        </td></tr>
 <tr><td>IND</td><td>Michael Pittman        </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>MIN</td><td>TJ Hockenson           </td></tr>
 <tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
+<tr><td>LAC</td><td>Gerald Everett         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Brandon Aubrey         </td></tr>
 <tr><td height=9></td><td></td></tr>
