--- a/week17.html
+++ b/week17.html
@@ -23,7 +23,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (4)</b></font></td></tr>
 <tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
 <tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
@@ -55,9 +55,9 @@
 <tr><td>ZWhite</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Everett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Rice</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Levis</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -95,11 +95,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (5)</b></font></td></tr>
-<tr><td>Mullens</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Young</td>         <td></td><td align=right>0</td></tr>
 <tr><td>RWhite</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Palmer</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Likely</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Moody</td>         <td></td><td align=right>0</td></tr>
@@ -109,14 +109,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (8)</b></font></td></tr>
-<tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Jeudy</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Palmer</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
+<tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -125,11 +125,11 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>Browning</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
