--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <a href="week14.html"><b>14</b></a>
 <a href="week15.html"><b>15</b></a>
 <a href="week16.html"><b>16</b></a>
-<a href="week17.html"><b>17P</b></a><br>
+<a href="week17.html"><b>17</b></a>
+<a href="week18.html"><b>18P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -77,7 +78,7 @@
 <tr><td><font size=2>Randy(7)</font></td>
     <td><font size=2>13</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>10665</font></td>
+    <td><font size=2>11355</font></td>
     <td><font size=2>8225</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>280</font></td>
@@ -85,7 +86,7 @@
 <tr><td><font size=2>Sam(3)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10880</font></td>
+    <td><font size=2>11650</font></td>
     <td><font size=2>9810</font></td>
     <td><font size=2>1095</font></td>
     <td><font size=2>300</font></td>
@@ -93,7 +94,7 @@
 <tr><td><font size=2>Grant(9)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9450</font></td>
+    <td><font size=2>9895</font></td>
     <td><font size=2>8440</font></td>
     <td><font size=2>865</font></td>
     <td><font size=2>225</font></td>
@@ -101,7 +102,7 @@
 <tr><td><font size=2>States(5)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9110</font></td>
+    <td><font size=2>9765</font></td>
     <td><font size=2>9005</font></td>
     <td><font size=2>1060</font></td>
     <td><font size=2>230</font></td>
@@ -109,7 +110,7 @@
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>9755</font></td>
+    <td><font size=2>10050</font></td>
     <td><font size=2>10875</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>210</font></td>
@@ -125,7 +126,7 @@
 <tr><td><font size=2>Steven(6)</font></td>
     <td><font size=2>10</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8755</font></td>
+    <td><font size=2>9185</font></td>
     <td><font size=2>8600</font></td>
     <td><font size=2>915</font></td>
     <td><font size=2>265</font></td>
@@ -133,15 +134,15 @@
 <tr><td><font size=2>John(4)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10430</font></td>
+    <td><font size=2>11270</font></td>
     <td><font size=2>9425</font></td>
     <td><font size=2>965</font></td>
     <td><font size=2>385</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>11040</font></td>
+    <td><font size=2>11505</font></td>
     <td><font size=2>10890</font></td>
     <td><font size=2>1180</font></td>
     <td><font size=2>210</font></td>
@@ -149,7 +150,7 @@
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>7890</font></td>
+    <td><font size=2>8630</font></td>
     <td><font size=2>9930</font></td>
     <td><font size=2>825</font></td>
     <td><font size=2>245</font></td>
@@ -157,7 +158,7 @@
 <tr><td><font size=2>Mike(8)</font></td>
     <td><font size=2>3</font></td>
     <td><font size=2>13</font></td>
-    <td><font size=2>7315</font></td>
+    <td><font size=2>7690</font></td>
     <td><font size=2>10090</font></td>
     <td><font size=2>695</font></td>
     <td><font size=2>175</font></td>
