--- a/week17.html
+++ b/week17.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (7)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>210</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>105</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>60</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>35</td></tr>
 <tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Flowers</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Njoku</td>         <td></td><td align=right>65</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>40</td></tr>
+<tr><td>Flowers</td>       <td></td><td align=right>175</td></tr>
+<tr><td></td>              <td></td><td align=right>690</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (4)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
-<tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>175</td></tr>
+<tr><td>KWilliams</td>     <td></td><td align=right>290</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>125</td></tr>
+<tr><td>JJefferson</td>    <td></td><td align=right>25</td></tr>
+<tr><td>St Brown</td>      <td></td><td align=right>120</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Grupe</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Grupe</td>         <td></td><td align=right>105</td></tr>
 <tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>840</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
-<tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Fields</td>        <td></td><td align=right>190</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Taylor</td>        <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Taylor</td>        <td></td><td align=right>95</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>25</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>120</td></tr>
 <tr><td>Spears</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>430</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (3)</b></font></td></tr>
-<tr><td>Jackson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
-<tr><td>ZWhite</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Jackson</td>       <td></td><td align=right>380</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>30</td></tr>
+<tr><td>ZWhite</td>        <td></td><td align=right>35</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>50</td></tr>
+<tr><td>DAdams</td>        <td></td><td align=right>160</td></tr>
 <tr><td>Everett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Aubrey</td>        <td></td><td align=right>115</td></tr>
 <tr><td>Levis</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>770</td></tr>
 </table>
 </td>
 </tr>
@@ -66,29 +66,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>100</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>35</td></tr>
 <tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>O'Connell</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>65</td></tr>
+<tr><td>O'Connell</td>     <td></td><td align=right>95</td></tr>
+<tr><td></td>              <td></td><td align=right>295</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (2)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>85</td></tr>
+<tr><td>Etienne</td>       <td></td><td align=right>300</td></tr>
 <tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Kincaid</td>       <td></td><td align=right>40</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>240</td></tr>
+<tr><td>Smith-Njigba</td>  <td></td><td align=right>75</td></tr>
+<tr><td></td>              <td></td><td align=right>740</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -98,26 +98,26 @@
 <tr><td>Young</td>         <td></td><td align=right>0</td></tr>
 <tr><td>RWhite</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Likely</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Moody</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Pickens</td>       <td></td><td align=right>65</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>235</td></tr>
+<tr><td>Likely</td>        <td></td><td align=right>175</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>115</td></tr>
+<tr><td>Moody</td>         <td></td><td align=right>65</td></tr>
+<tr><td></td>              <td></td><td align=right>655</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (8)</b></font></td></tr>
-<tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Minshew</td>       <td></td><td align=right>130</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>40</td></tr>
 <tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Palmer</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Palmer</td>        <td></td><td align=right>140</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>65</td></tr>
 <tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>375</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>135</td></tr>
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
+<tr><td>BHall</td>         <td></td><td align=right>140</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
-<tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Aiyuk</td>         <td></td><td align=right>130</td></tr>
+<tr><td>LaPorta</td>       <td></td><td align=right>40</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>445</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Purdy</td>         <td></td><td align=right>105</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Edwards</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Pacheco</td>       <td></td><td align=right>140</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>50</td></tr>
+<tr><td>Nacua</td>         <td></td><td align=right>55</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>40</td></tr>
+<tr><td>Stroud</td>        <td></td><td align=right>75</td></tr>
+<tr><td></td>              <td></td><td align=right>465</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -169,7 +169,7 @@
 <tr><td><font size=2>Randy(7)</font></td>
     <td><font size=2>13</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>10665</font></td>
+    <td><font size=2>11355</font></td>
     <td><font size=2>8225</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>280</font></td>
@@ -177,7 +177,7 @@
 <tr><td><font size=2>Sam(3)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10880</font></td>
+    <td><font size=2>11650</font></td>
     <td><font size=2>9810</font></td>
     <td><font size=2>1095</font></td>
     <td><font size=2>300</font></td>
@@ -185,7 +185,7 @@
 <tr><td><font size=2>Grant(9)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9450</font></td>
+    <td><font size=2>9895</font></td>
     <td><font size=2>8440</font></td>
     <td><font size=2>865</font></td>
     <td><font size=2>225</font></td>
@@ -193,7 +193,7 @@
 <tr><td><font size=2>States(5)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9110</font></td>
+    <td><font size=2>9765</font></td>
     <td><font size=2>9005</font></td>
     <td><font size=2>1060</font></td>
     <td><font size=2>230</font></td>
@@ -201,7 +201,7 @@
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>9755</font></td>
+    <td><font size=2>10050</font></td>
     <td><font size=2>10875</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>210</font></td>
@@ -217,7 +217,7 @@
 <tr><td><font size=2>Steven(6)</font></td>
     <td><font size=2>10</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>8755</font></td>
+    <td><font size=2>9185</font></td>
     <td><font size=2>8600</font></td>
     <td><font size=2>915</font></td>
     <td><font size=2>265</font></td>
@@ -225,15 +225,15 @@
 <tr><td><font size=2>John(4)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10430</font></td>
+    <td><font size=2>11270</font></td>
     <td><font size=2>9425</font></td>
     <td><font size=2>965</font></td>
     <td><font size=2>385</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>11040</font></td>
+    <td><font size=2>11505</font></td>
     <td><font size=2>10890</font></td>
     <td><font size=2>1180</font></td>
     <td><font size=2>210</font></td>
@@ -241,7 +241,7 @@
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>7890</font></td>
+    <td><font size=2>8630</font></td>
     <td><font size=2>9930</font></td>
     <td><font size=2>825</font></td>
     <td><font size=2>245</font></td>
@@ -249,7 +249,7 @@
 <tr><td><font size=2>Mike(8)</font></td>
     <td><font size=2>3</font></td>
     <td><font size=2>13</font></td>
-    <td><font size=2>7315</font></td>
+    <td><font size=2>7690</font></td>
     <td><font size=2>10090</font></td>
     <td><font size=2>695</font></td>
     <td><font size=2>175</font></td>
