--- a/freeagt.html
+++ b/freeagt.html
@@ -1,25 +1,25 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2023 Free Agent Leaderboard<br>(Through week 16)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2023 Free Agent Leaderboard<br>(Through week 17)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Derek Carr             </td><td><font size=3>1430</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Derek Carr             </td><td><font size=3>1530</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Desmond Ridder         </td><td><font size=3>1215</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 945</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Joe Flacco             </td><td><font size=3>1195</td></tr>
 <tr><td><font size=3>4)</td><td><font size=3>Mac Jones              </td><td><font size=3> 700</td></tr>
 <tr><td><font size=3>5)</td><td><font size=3>Zach Wilson            </td><td><font size=3> 665</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Kenny Pickett          </td><td><font size=3> 640</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 540</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Bailey Zappe           </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 335</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Easton Stick           </td><td><font size=3> 310</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 305</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Drew Lock              </td><td><font size=3> 290</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 290</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 640</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Kenny Pickett          </td><td><font size=3> 640</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 570</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Bailey Zappe           </td><td><font size=3> 520</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 440</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 435</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Easton Stick           </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Daniel Jones           </td><td><font size=3> 335</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Drew Lock              </td><td><font size=3> 290</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
@@ -34,66 +34,66 @@
 <tr><td><font size=3>Clyde Edwards-Helaire  </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Salvon Ahmed           </td><td><font size=3> 175</td></tr>
 <tr><td><font size=3>Brandon Bolden         </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>Darrell Henderson      </td><td><font size=3> 155</td></tr>
 <tr><td><font size=3>Cam Akers              </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Kevin Harris           </td><td><font size=3> 125</td></tr>
 <tr><td><font size=3>Ty Johnson             </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Craig Reynolds         </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>Matt Breida            </td><td><font size=3> 100</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 855</td></tr>
+<tr><td><font size=3>Jakobi Meyers          </td><td><font size=3> 880</td></tr>
 <tr><td><font size=3>Rashid Shaheed         </td><td><font size=3> 845</td></tr>
 <tr><td><font size=3>Romeo Doubs            </td><td><font size=3> 725</td></tr>
-<tr><td><font size=3>Brandin Cooks          </td><td><font size=3> 600</td></tr>
+<tr><td><font size=3>Brandin Cooks          </td><td><font size=3> 705</td></tr>
+<tr><td><font size=3>Darius Slayton         </td><td><font size=3> 625</td></tr>
 <tr><td><font size=3>DJ Chark               </td><td><font size=3> 510</td></tr>
 <tr><td><font size=3>Josh Reynolds          </td><td><font size=3> 510</td></tr>
 <tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 485</td></tr>
 <tr><td><font size=3>Jahan Dotson           </td><td><font size=3> 455</td></tr>
 <tr><td><font size=3>Odell Beckham          </td><td><font size=3> 450</td></tr>
-<tr><td><font size=3>Darius Slayton         </td><td><font size=3> 450</td></tr>
 <tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 385</td></tr>
 <tr><td><font size=3>Brandon Johnson        </td><td><font size=3> 385</td></tr>
+<tr><td><font size=3>Demarcus Robinson      </td><td><font size=3> 385</td></tr>
 <tr><td><font size=3>Rondale Moore          </td><td><font size=3> 375</td></tr>
 <tr><td><font size=3>Tutu Atwell            </td><td><font size=3> 350</td></tr>
-<tr><td><font size=3>Ihmir Smith-Marsette   </td><td><font size=3> 350</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Mark Andrews           </td><td><font size=3> 570</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 340</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 330</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Cade Otton             </td><td><font size=3> 290</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Jimmy Graham           </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Donald Parham          </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Adam Trautman          </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Darren Waller          </td><td><font size=3> 195</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Tyler Higbee           </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Pharaoh Brown          </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Harrison Bryant        </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>TJ Hockenson           </td><td><font size=3> 745</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Mark Andrews           </td><td><font size=3> 570</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Logan Thomas           </td><td><font size=3> 340</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 295</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Cade Otton             </td><td><font size=3> 290</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Jimmy Graham           </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Donald Parham          </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Tyler Higbee           </td><td><font size=3> 220</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Darren Waller          </td><td><font size=3> 220</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Adam Trautman          </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Pharaoh Brown          </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Harrison Bryant        </td><td><font size=3> 175</td></tr>
 <tr><td><font size=3>15)</td><td><font size=3>Drew Sample            </td><td><font size=3> 175</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3>1185</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3>1125</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3>1120</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3>1080</td></tr>
-<tr><td><font size=3>Cameron Dicker         </td><td><font size=3>1075</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3>1070</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3>1315</td></tr>
+<tr><td><font size=3>Cameron Dicker         </td><td><font size=3>1225</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3>1185</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3>1180</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3>1140</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3>1075</td></tr>
 <tr><td><font size=3>Eddy Pineiro           </td><td><font size=3>1030</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 835</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3> 835</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 785</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 925</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 900</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 885</td></tr>
 <tr><td><font size=3>Brett Maher            </td><td><font size=3> 735</td></tr>
-<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 665</td></tr>
-<tr><td><font size=3>Lucas Havrisik         </td><td><font size=3> 545</td></tr>
+<tr><td><font size=3>Riley Patterson        </td><td><font size=3> 715</td></tr>
+<tr><td><font size=3>Lucas Havrisik         </td><td><font size=3> 555</td></tr>
 <tr><td><font size=3>Graham Gano            </td><td><font size=3> 485</td></tr>
 <tr><td><font size=3>Randy Bullock          </td><td><font size=3> 260</td></tr>
 </table>
@@ -101,9 +101,9 @@
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
 <tr><td><font size=3>Tank Dell              </td><td><font size=3> 980</td></tr>
+<tr><td><font size=3>Michael Wilson         </td><td><font size=3> 360</td></tr>
 <tr><td><font size=3>Xavier Gipson          </td><td><font size=3> 335</td></tr>
 <tr><td><font size=3>Dontayvion Wicks       </td><td><font size=3> 315</td></tr>
-<tr><td><font size=3>Michael Wilson         </td><td><font size=3> 305</td></tr>
 <tr><td><font size=3>Tre Tucker             </td><td><font size=3> 275</td></tr>
 <tr><td><font size=3>Derius Davis           </td><td><font size=3> 225</td></tr>
 <tr><td><font size=3>Quentin Johnston       </td><td><font size=3> 220</td></tr>
