--- a/week18.html
+++ b/week18.html
@@ -21,14 +21,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (4)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>KWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hurts (D)</td>     <td></td><td align=right>0</td></tr>
+<tr><td>KWilliams (D)</td> <td></td><td align=right>0</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
-<tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
+<tr><td>St Brown (D)</td>  <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Grupe</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
