--- a/week18.html
+++ b/week18.html
@@ -7,14 +7,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (3)</b></font></td></tr>
-<tr><td>Jackson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Jackson (D)</td>   <td></td><td align=right>0</td></tr>
+<tr><td>McCaffrey (D)</td> <td></td><td align=right>0</td></tr>
 <tr><td>ZWhite</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
+<tr><td>DSamuel (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Everett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Levis</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Aubrey (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Rice (D)</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -40,7 +40,7 @@
 <tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>O'Connell</td>     <td></td><td align=right>0</td></tr>
@@ -100,9 +100,9 @@
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Flowers</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Njoku (D)</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Tucker (D)</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Flowers (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
