--- a/week18.html
+++ b/week18.html
@@ -129,9 +129,9 @@
 <tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Aiyuk</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Cooper (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>DCarlson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -139,12 +139,12 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>Purdy</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Pacheco</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Nacua</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Purdy (D)</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Pacheco (D)</td>   <td></td><td align=right>0</td></tr>
+<tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Nacua (D)</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Kittle (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
