--- a/week18.html
+++ b/week18.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (3)</b></font></td></tr>
-<tr><td>Jackson (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>McCaffrey (D)</td> <td></td><td align=right>0</td></tr>
-<tr><td>ZWhite</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Jackson (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>McCaffrey (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td>ZWhite</td>        <td></td><td align=right>55</td></tr>
+<tr><td>DSamuel (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>DAdams</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Everett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Rice (D)</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Aubrey (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Rice (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (4)</b></font></td></tr>
-<tr><td>Hurts (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>KWilliams (D)</td> <td></td><td align=right>0</td></tr>
-<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
-<tr><td>St Brown (D)</td>  <td></td><td align=right>0</td></tr>
+<tr><td>Hurts (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>KWilliams (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>250</td></tr>
+<tr><td>JJefferson</td>    <td></td><td align=right>195</td></tr>
+<tr><td>St Brown (D)</td>  <td></td><td align=right>***</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Grupe</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Zuerlein</td>      <td></td><td align=right>95</td></tr>
+<tr><td>Grupe</td>         <td></td><td align=right>70</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>BRobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>165</td></tr>
+<tr><td>BRobinson</td>     <td></td><td align=right>175</td></tr>
 <tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Collins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Ferguson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>O'Connell</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>40</td></tr>
+<tr><td>Collins</td>       <td></td><td align=right>220</td></tr>
+<tr><td>Ferguson</td>      <td></td><td align=right>30</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>35</td></tr>
+<tr><td>O'Connell</td>     <td></td><td align=right>135</td></tr>
+<tr><td></td>              <td></td><td align=right>800</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (2)</b></font></td></tr>
 <tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Etienne</td>       <td></td><td align=right>25</td></tr>
 <tr><td>Mostert</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Kincaid</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>175</td></tr>
+<tr><td>Kincaid</td>       <td></td><td align=right>40</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>70</td></tr>
 <tr><td>Smith-Njigba</td>  <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>310</td></tr>
 </table>
 </td>
 </tr>
@@ -67,57 +67,57 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (5)</b></font></td></tr>
 <tr><td>Young</td>         <td></td><td align=right>0</td></tr>
-<tr><td>RWhite</td>        <td></td><td align=right>0</td></tr>
+<tr><td>RWhite</td>        <td></td><td align=right>35</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Likely</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Moody</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>170</td></tr>
+<tr><td>Likely</td>        <td></td><td align=right>100</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>120</td></tr>
+<tr><td>Moody</td>         <td></td><td align=right>10</td></tr>
+<tr><td></td>              <td></td><td align=right>435</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (6)</b></font></td></tr>
 <tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Taylor</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>175</td></tr>
+<tr><td>Taylor</td>        <td></td><td align=right>290</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McBride</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Spears</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>McBride</td>       <td></td><td align=right>75</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>55</td></tr>
+<tr><td>Spears</td>        <td></td><td align=right>150</td></tr>
+<tr><td></td>              <td></td><td align=right>745</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (7)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Olave</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Njoku (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Tucker (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Flowers (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>165</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>55</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>180</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>90</td></tr>
+<tr><td>Olave</td>         <td></td><td align=right>125</td></tr>
+<tr><td>Njoku (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Tucker (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Flowers (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (8)</b></font></td></tr>
-<tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Addison</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Minshew</td>       <td></td><td align=right>5</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>50</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>80</td></tr>
+<tr><td>Addison</td>       <td></td><td align=right>150</td></tr>
 <tr><td>Palmer</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>15</td></tr>
 <tr><td>McLaughlin</td>    <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>300</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
-<tr><td>BHall</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>90</td></tr>
+<tr><td>Pollard</td>       <td></td><td align=right>85</td></tr>
+<tr><td>BHall</td>         <td></td><td align=right>295</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Cooper (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>LaPorta</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DCarlson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Gibbs</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Cooper (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>LaPorta</td>       <td></td><td align=right>50</td></tr>
+<tr><td>DCarlson</td>      <td></td><td align=right>80</td></tr>
+<tr><td>Gibbs</td>         <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>Purdy (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Pacheco (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Achane</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Purdy (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Pacheco (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Achane</td>        <td></td><td align=right>175</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Nacua (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kittle (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Stroud</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Nacua (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Kittle (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>40</td></tr>
+<tr><td>Stroud</td>        <td></td><td align=right>165</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -193,7 +193,7 @@
 <tr><td><font size=2>States(5)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9765</font></td>
+    <td><font size=2>10200</font></td>
     <td><font size=2>9005</font></td>
     <td><font size=2>1060</font></td>
     <td><font size=2>230</font></td>
@@ -201,7 +201,7 @@
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>10050</font></td>
+    <td><font size=2>10850</font></td>
     <td><font size=2>10875</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>210</font></td>
@@ -217,7 +217,7 @@
 <tr><td><font size=2>Steven(6)</font></td>
     <td><font size=2>10</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>9185</font></td>
+    <td><font size=2>9930</font></td>
     <td><font size=2>8600</font></td>
     <td><font size=2>915</font></td>
     <td><font size=2>265</font></td>
@@ -241,7 +241,7 @@
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>8630</font></td>
+    <td><font size=2>8940</font></td>
     <td><font size=2>9930</font></td>
     <td><font size=2>825</font></td>
     <td><font size=2>245</font></td>
@@ -249,7 +249,7 @@
 <tr><td><font size=2>Mike(8)</font></td>
     <td><font size=2>3</font></td>
     <td><font size=2>13</font></td>
-    <td><font size=2>7690</font></td>
+    <td><font size=2>7990</font></td>
     <td><font size=2>10090</font></td>
     <td><font size=2>695</font></td>
     <td><font size=2>175</font></td>
