--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <a href="week15.html"><b>15</b></a>
 <a href="week16.html"><b>16</b></a>
 <a href="week17.html"><b>17</b></a>
-<a href="week18.html"><b>18P</b></a><br>
+<a href="week18.html"><b>18</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -78,7 +78,7 @@
 <tr><td><font size=2>Randy(7)</font></td>
     <td><font size=2>13</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>11355</font></td>
+    <td><font size=2>12140</font></td>
     <td><font size=2>8225</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>280</font></td>
@@ -86,7 +86,7 @@
 <tr><td><font size=2>Sam(3)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11650</font></td>
+    <td><font size=2>12550</font></td>
     <td><font size=2>9810</font></td>
     <td><font size=2>1095</font></td>
     <td><font size=2>300</font></td>
@@ -142,11 +142,11 @@
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>11505</font></td>
+    <td><font size=2>12440</font></td>
     <td><font size=2>10890</font></td>
     <td><font size=2>1180</font></td>
     <td><font size=2>210</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
