--- a/week18.html
+++ b/week18.html
@@ -7,15 +7,15 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (3)</b></font></td></tr>
-<tr><td>Jackson (D)</td>   <td></td><td align=right>***</td></tr>
-<tr><td>McCaffrey (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td>Jackson (D)</td>   <td></td><td align=right>325</td></tr>
+<tr><td>McCaffrey (D)</td> <td></td><td align=right>295</td></tr>
 <tr><td>ZWhite</td>        <td></td><td align=right>55</td></tr>
-<tr><td>DSamuel (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>DSamuel (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>DAdams</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Everett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Aubrey (D)</td>    <td></td><td align=right>35</td></tr>
 <tr><td>Rice (D)</td>      <td></td><td align=right>140</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>900</td></tr>
 </table>
 </td>
 <td>
@@ -101,9 +101,9 @@
 <tr><td>Hill</td>          <td></td><td align=right>90</td></tr>
 <tr><td>Olave</td>         <td></td><td align=right>125</td></tr>
 <tr><td>Njoku (D)</td>     <td></td><td align=right>45</td></tr>
-<tr><td>Tucker (D)</td>    <td></td><td align=right>***</td></tr>
-<tr><td>Flowers (D)</td>   <td></td><td align=right>***</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td>Tucker (D)</td>    <td></td><td align=right>125</td></tr>
+<tr><td>Flowers (D)</td>   <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>785</td></tr>
 </table>
 </td>
 <td>
@@ -139,15 +139,15 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>Purdy (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Purdy (D)</td>     <td></td><td align=right>110</td></tr>
 <tr><td>Pacheco (D)</td>   <td></td><td align=right>90</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>175</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Nacua (D)</td>     <td></td><td align=right>215</td></tr>
-<tr><td>Kittle (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Kittle (D)</td>    <td></td><td align=right>140</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>40</td></tr>
 <tr><td>Stroud</td>        <td></td><td align=right>165</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>935</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -169,7 +169,7 @@
 <tr><td><font size=2>Randy(7)</font></td>
     <td><font size=2>13</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>11355</font></td>
+    <td><font size=2>12140</font></td>
     <td><font size=2>8225</font></td>
     <td><font size=2>1020</font></td>
     <td><font size=2>280</font></td>
@@ -177,7 +177,7 @@
 <tr><td><font size=2>Sam(3)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11650</font></td>
+    <td><font size=2>12550</font></td>
     <td><font size=2>9810</font></td>
     <td><font size=2>1095</font></td>
     <td><font size=2>300</font></td>
@@ -233,11 +233,11 @@
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>11505</font></td>
+    <td><font size=2>12440</font></td>
     <td><font size=2>10890</font></td>
     <td><font size=2>1180</font></td>
     <td><font size=2>210</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
