--- a/treasury.html
+++ b/treasury.html
@@ -5,17 +5,16 @@
 <table border=2>
 <tr><td><b>Prize</b></td>
     <td width=42><b>Roger</b></td>
-    <td width=42><b>States</b></td>
-    <td width=42><b>Mike</b></td>
-    <td width=42><b>Sam</b></td>
-    <td width=42><b>Grant</b></td>
     <td width=42><b>Rich</b></td>
-    <td width=42><b>Matthew</b></td>
-    <td width=42><b>Randy</b></td>
+    <td width=42><b>Sam</b></td>
+    <td width=42><b>John</b></td>
+    <td width=42><b>States</b></td>
     <td width=42><b>Steven</b></td>
-    <td width=42><b>John</b></td></tr>
+    <td width=42><b>Randy</b></td>
+    <td width=42><b>Mike</b></td>
+    <td width=42><b>Grant</b></td>
+    <td width=42><b>Matthew</b></td></tr>
 <tr><td>Fantasy Bowl winner</td>
-    <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">$170</td>
@@ -24,12 +23,13 @@
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
+    <td align="right">0</td>
     <td align="right">0</td></tr>
 <tr><td>2nd place in playoffs</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
     <td align="right">$110</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
@@ -38,57 +38,57 @@
     <td align="right">0</td></tr>
 <tr><td>Make playoffs</td>
     <td align="right">0</td>
-    <td align="right">$50</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">$50</td>
+    <td align="right">$50</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
     <td align="right">0</td></tr>
 <tr><td>Most points for year</td>
     <td align="right">0</td>
     <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
-    <td align="right">0</td>
     <td align="right">$100</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
+    <td align="right">0</td>
     <td align="right">0</td></tr>
 <tr><td>2nd most points for year</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
-    <td align="right">$50</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
     <td align="right">0</td>
-    <td align="right">0</td></tr>
+    <td align="right">0</td>
+    <td align="right">$50</td></tr>
 <tr><td>Highest score for week</td>
     <td align="right">$15</td>
+    <td align="right">$15</td>
+    <td align="right">$75</td>
+    <td align="right">$15</td>
+    <td align="right">$15</td>
     <td align="right">0</td>
-    <td align="right">$30</td>
-    <td align="right">$60</td>
+    <td align="right">$15</td>
     <td align="right">0</td>
-    <td align="right">$30</td>
-    <td align="right">$30</td>
     <td align="right">$45</td>
-    <td align="right">$30</td>
-    <td align="right">$30</td></tr>
+    <td align="right">$75</td></tr>
 <tr><td>Total</td>
+    <td align="right">$15</td>
+    <td align="right">$15</td>
+    <td align="right">$345</td>
     <td align="right">$125</td>
+    <td align="right">$15</td>
     <td align="right">$50</td>
-    <td align="right">$30</td>
-    <td align="right">$280</td>
+    <td align="right">$65</td>
     <td align="right">0</td>
-    <td align="right">$30</td>
-    <td align="right">$30</td>
     <td align="right">$45</td>
-    <td align="right">$180</td>
-    <td align="right">$30</td></tr>
+    <td align="right">$125</td></tr>
 </table>
