--- a/playoff.html
+++ b/playoff.html
@@ -9,6 +9,12 @@
     <td><b>Semifinal</b></td>
     <td><b>Points Champion</td>
     <td><b>2nd Points</b></td></tr>
+<tr><td>2023</td>
+    <td>Sam(900)-John(755)</td>
+    <td>Sam(770)-Steven(430)</td>
+    <td>John(840)-Randy(690)</td>
+    <td>Sam (12550)</td>
+    <td>Matthew (12440)</td></tr>
 <tr><td>2022</td>
     <td>Sam(530)-Roger(325)</td>
     <td>Sam(670)-Steven(555)</td>
