--- a/week1.html
+++ b/week1.html
@@ -28,7 +28,7 @@
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
 <tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Maye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Reichard</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
